3_complex_example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: env-vars-app-service
spec:
  selector:
    app: env-vars-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
