3_complex_example/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-vars-app-ingress
spec:
  rules:
    - host: env-banana-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-vars-app-service
                port:
                  number: 80
